--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dlrq7tgou"
-CLOUDINARY_URL="cloudinary://724197249784195:M9Wh8Lvnb4cwJymBpXEExye6e8A@dlrq7tgou"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="deucdujgg"
+CLOUDINARY_URL="cloudinary://463754271738786:tRZHXCsJpvjtpLDREFo3rYK3WCc@deucdujgg"
