--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@uidotdev/usehooks": "^2.3.1",
     "autoprefixer": "10.4.15",
     "cloudinary": "^1.41.0",
     "clsx": "^2.0.0",
