--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/kbd": "2.0.17",
     "@nextui-org/link": "2.0.19",
     "@nextui-org/navbar": "2.0.19",
+    "@nextui-org/react": "^2.1.13",
     "@nextui-org/snippet": "2.0.22",
     "@nextui-org/switch": "2.0.18",
     "@nextui-org/system": "2.0.7",
@@ -32,7 +33,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.4.0",
-    "framer-motion": "^10.16.2",
+    "framer-motion": "^10.16.4",
     "intl-messageformat": "^10.5.0",
     "next": "13.4.19",
     "next-cloudinary": "^4.22.0",
